--- a/src/DevIO.Api/appsettings.json
+++ b/src/DevIO.Api/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-B76722G\\SQLEXPRESS;Database=WebApiCore;User Id=developer;Password=dev*10;MultipleActiveResultSets=true"
+  }
 }
