--- a/src/DevIO.Api/DevIO.Api.csproj
+++ b/src/DevIO.Api/DevIO.Api.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\imagens\" />
+    <Folder Include="wwwroot\" />
   </ItemGroup>
 
 </Project>
