Implementado autenticação via JWT (Json Web Token)

--- a/src/DevIO.Api/appsettings.json
+++ b/src/DevIO.Api/appsettings.json
@@ -9,5 +9,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-B76722G\\SQLEXPRESS;Database=WebApiCore;User Id=developer;Password=dev*10;MultipleActiveResultSets=true"
+  },
+  "AppSettings": {
+    "Secret": "MEUSEGREDOSUPERSECRETO",
+    "ExpiracaoHoras": 2,
+    "Emissor": "MeuSistema",
+    "ValidoEm": "https://localhost"
   }
 }
