Adicionado diretórios V1 e V2 que correspondem as versões da API

--- a/src/DevIO.Api/DevIO.Api.csproj
+++ b/src/DevIO.Api/DevIO.Api.csproj
@@ -23,4 +23,9 @@
     <ProjectReference Include="..\DevIO.Data\DevIO.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="V2\" />
+    <Folder Include="V1\" />
+  </ItemGroup>
+
 </Project>
