--- a/src/DevIO.Api/DevIO.Api.csproj
+++ b/src/DevIO.Api/DevIO.Api.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNetCore.HealthChecks.SqlServer" Version="5.0.3" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="Elmah.Io.AspNetCore" Version="4.1.37" />
     <PackageReference Include="Elmah.Io.Extensions.Logging" Version="4.1.28" />
