Implementado Health Checks UI e adicionado configuração para examinar saúde do SQL Server

--- a/src/DevIO.Api/appsettings.json
+++ b/src/DevIO.Api/appsettings.json
@@ -10,6 +10,14 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-B76722G\\SQLEXPRESS;Database=WebApiCore;User Id=developer;Password=dev*10;MultipleActiveResultSets=true"
   },
+  "HealthChecks-UI": {
+    "HealthChecks": [
+      {
+        "Name": "HC-API",
+        "Uri": "https://localhost:44345/api/hc"
+      }
+    ]
+  },
   "AppSettings": {
     "Secret": "MEUSEGREDOSUPERSECRETO",
     "ExpiracaoHoras": 2,
