--- a/src/DevIO.Api/Properties/launchSettings.json
+++ b/src/DevIO.Api/Properties/launchSettings.json
@@ -17,6 +17,14 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
+    "IIS Express - Staging": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Staging"
+      }
+    },
     "IIS Express - Production": {
       "commandName": "IISExpress",
       "launchBrowser": true,
